--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
 		"bower": "^1.3.1",
 		"shelljs": "^0.2.6",
 		"karma-junit-reporter": "^0.2.2",
-		"connect-modrewrite": "~0.2.1"
+		"connect-modrewrite": "~0.2.1",
+		"express":"*",
+		"stylus":"*",
+		"jade":"*",
+		"express-livereload":"*"
 	},
 	"scripts": {
 		"postinstall": "bower install",
