--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
 		"bootstrap": "3.1.x",
 		"angular-mocks": "~1.2.x",
 		"angular-bootstrap": "0.11.x",
-		"angular-ui-router": "0.2.x"
+		"angular-ui-router": "0.2.x",
+		"angular-resource": "~1.2.x"
 	},
 
 	"build": "app",
